18-Sep-2015 Laurent Duflot
	* ZeroLeptonRunPeriod.h, JobBookeeping.cxx, launch_jobs_on_grid.py: add p2419

17-Sep-2015 Laurent Duflot
	* FilterUpdateMerge.py: wrong file was copied over on last update!
	allow to use pickle file as file input list
	* makeDatasetList.py: add r6895 to 25ns tags (not on wiki...)
	* mc15_13TeV_MCSampleList.py: fix code typo
	* data: remove mc14 samples, add mc15_13TeV_25ns_SM_xAOD.ds

13-Sep-2015 Geraldine Conti
	* Updated the boson tagging numbers to latest recommendation

11-Sep-2015 Laurent Duflot
	* makeDatasetList.py: update rtags for 50ns and 25ns MC

09-Sep-2015 Geraldine Conti
	* Added variable for lepton pT coming from W in CR3L

03-Sep-2015 Laurent Duflot
	* tag as -49

26-Aug-2015 Geraldine
	* Added lepton isolation variables in CRWT

26-Aug-2015 Geraldine Conti
	* Added reclustering and boson tagging variables in the ReclTree
	* ZeroLeptonCR3L.cxx, ZeroLeptonCRY.cxx, ZeroLeptonCRZ.cxx,
	ZeroLeptonCRWT.cxx, ZeroLeptonSR.cxx : changed FillNTReclusteringVars
	function and added boson tagging calculations in CRWT, CRZ and SR
	* Added ReclJetMass,ReclJetPt,ReclJetEta,ReclJetPhi,D2,isWmedium,
	isWtight,isZmedium,isZtight in FillNTReclusteringVars in
	PhysObjProxyUtils.cxx/h
	* Variables added in ZeroLeptonNTVars.cxx/h
	* zerolepton.config : added global variable doRecl (still commented
	out, because there is still a bug to fix)

26-Aug-2015 Geraldine Conti
	* Added CR3L code :
	* ZeroLeptonCR3L.cxx/h added
	* zerolepton.config, zeroleptontruth.config : added cr3l, vr3l
	* LinkDef.h : added CR3L
	* ZeroLeptonNTVars.cxx/h : added variables for CL3L

26-Aug-2015 Geraldine Conti
	* Code for new reclustering added:
	* INSTALL : added line for new package xAODJetReclustering
	* PhysObjProxyFiller.cxx/h : initialization of the reclustering
	tool,added function FillJetReclProxies to fill recl. jets
	* ZeroLeptonCRWT.cxx/h, ZeroLeptonCRY.cxx/h, ZeroLeptonCRZ.cxx/h
	ZeroLeptonDataDrivenQCD.cxx, ZeroLeptonSR.cxx/h : added bool m_doRecl,