@@ -1,5 +1,7 @@
 18-Sep-2015 Laurent Duflot
 	* ZeroLeptonRunPeriod.h, JobBookeeping.cxx, launch_jobs_on_grid.py: add p2419
+	* data/mc15_13TeV_signal_25ns_xAOD.ds : 25ns xAOD signal samples
+	* makeDatasetList.py: update for signal samples, including AtlFastII
 
 17-Sep-2015 Laurent Duflot
 	* FilterUpdateMerge.py: wrong file was copied over on last update!
